--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background: url('C:\\Users\\qqq\\OneDrive\\桌面\\IMG_4580.PNG') center/cover no-repeat; /* 請確保路徑正確，並且圖片有副檔名（例如 .jpg） */
+            background: url('https://github.com/C111181105/C111181105.github.io/blob/main/IMG_4580.PNG' /* 請確保路徑正確，並且圖片有副檔名（例如 .jpg） */
             background-attachment: fixed;
             color: #fff;
         }
